- fixed a similar bug in ContentDirectory.pm regarding the parent_id() function
- added history for DirectoryListings to PDLNA::Device object
- fixed a problem regarding the different duration notations of audio and video files
- added support for audio mime-types: audio/x-flac
- fixed 'Upper Folder' problem with Samsung TV (handling @parentID filter value in XML request)

Version 0.44.0
04-Jan-2012

- changed ContentItem detection from file extension to mime type
- PDLNA::Device.pm improvements regarding fetching the XML description (just once and not our own)
- items are sorted in directory listing
- added support for the following image mime-types: image/gif
- added support for the following audio mime-types: audio/mp4, audio/x-ms-wma
- added support for the following video mime-types: video/mp4, video/mpeg
- fixed 'die' in line 809 of PDLNA::HTTPServer package
- updated copyright year

Version 0.43.0
30-Dec-2011

- added MKV video streaming support
- modified PDLNA::DeviceList and PDLNA::Device to be shared among different threads
- added PDLNA::DeviceList to PDLNA::HTTPServer thread to detect device type for Samsung specific Mime-Type of MKV files (video/x-mkv instead of video/x-matrovska)
- added ExcludeDirs and ExcludeItems to define specific directories or items to be added to the ContentLibrary
- modified binary configuration by enabling different values in the conifguration file (1, on, true, enable, enabled, yes)
- another small change to initscript and install.pl to execute initscript directly from git repo
- added function model_name() to PDLNA::Device.pm, which gets the XML description from a UPnP device and reads in the modelName

Version 0.42.0
28-Dec-2011

- added support for external streaming sources (e.g. VDR-Streamer - see https://github.com/jjYBdx4IL/VDR-Streamer) (thanks to jjYBdx4IL)
- added full streaming functionality (tested with Samsung LED TV (UE40B8090)) (thanks to jjYBdx4IL again)