@@ -136,7 +136,7 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 	recursion no
 </Directory>
 
-#<External "/media/external/external_mpegstream_src.pl">
+#<External "/media/external/mpegstream_src.pl">
 #    type video
 #</External>
 
